syntax = "proto3";

package selfchain.keyless;

import "gogoproto/gogo.proto";

option go_package = "selfchain/x/keyless/types";

// KeygenParams represents parameters for key generation
message KeygenParams {
  uint32 security_level = 1;
  uint32 threshold = 2;
  uint32 parties = 3;
}

// KeygenResult represents the result of key generation
message KeygenResult {
  bool success = 1;
  string error = 2;
  string public_key = 3;
  map<string, string> metadata = 4;
}

// KeygenResponse represents a response from a party during key generation
message KeygenResponse {
  bool success = 1;
  string error = 2;
  map<string, string> metadata = 3;
}

// PartyData represents TSS party data
message PartyData {
  string party_id = 1;
  uint32 index = 2;
  bytes data = 3;
  map<string, string> metadata = 4;
}

// KeyGenRequest represents a request to generate a new key
message KeyGenRequest {
  string wallet_id = 5;
  string security_level = 6;
}

// KeyGenResponse represents a response from key generation
message KeyGenResponse {
  string wallet_id = 7;
  uint64 version = 8;
  bytes public_key = 9;
  KeyMetadata metadata = 10;
}

// EncryptedShare represents an encrypted key share
message EncryptedShare {
  bytes data = 11;
  bytes nonce = 12;
  bytes public_key = 13;
}

// KeyMetadata represents metadata about a key
message KeyMetadata {
  string security_level = 14;
  uint64 version = 15;
  uint32 threshold = 16;
  uint32 total_shares = 17;
  bytes public_key = 18;
}
